--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server/weewikipaint.js",
   "dependencies": {
     "jake": "^8.1.1",
-    "jshint": "^2.10.2"
+    "jshint": "^2.10.2",
+    "procfile": "^0.1.1"
   },
   "devDependencies": {
     "nodeunit": "^0.11.3"
