--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "procfile": "^0.1.1"
   },
   "devDependencies": {
+    "expect.js": "^0.3.1",
+    "karma": "^3.1.4",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "mocha": "^6.1.4",
     "nodeunit": "^0.11.3"
   },
   "scripts": {
