--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: node_js
 node_js:
   - '6'
 
+before_install:
+  - sudo apt-get install -y chromium-browser
+  # firefox and phantomjs are installed by default
+
 jobs:
   include:
     - stage: test
